2006-11-11  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-topic-content-regexp): Fix regexp.
	(mixi-topic-realize): Follow the change above.
	(mixi-topic-comment-list-regexp): Fix regexp.
	(mixi-diary-comment-list-regexp): Follow the change above.
	(mixi-get-comments): Ditto.

2006-11-11  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-topic-comment-list-page): Use `all' instead of '%d'.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-get-new-comments): Return diaries instead of comments.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-group-alist): Add `messages' to default
	value.
	(shimbun-mixi-make-xref): Follow the change above.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-get-headers): Stop getting comment's
	headers when it was already shown.
	(shimbun-get-headers): Follow the change above.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el: New file.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-expand-url): Don't expand twice.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-log-list-regexp): Fix regexp.
	(mixi-community-owner-regexp): Ditto.
	(mixi-topic-owner-regexp): Ditto.
	(mixi-topic-content-regexp): Ditto.
	(mixi-diary-comment-list-regexp): Ditto.
	(mixi-topic-comment-list-regexp): Ditto.
	(mixi-message-owner-regexp): Ditto.
	(mixi-introduction-list-regexp): Ditto.
	(mixi-my-introduction-list-regexp): Ditto.

2006-11-09  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-object-owner): New accessor method.
	(mixi-object-time): Ditto.
	(mixi-object-title): Ditto.

2006-11-09  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-make-friend-from-url): Support my object.
	(mixi-make-object-from-url): Ditto.

2006-11-08  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-friend-realize): Don't remove markup.
	(mixi-diary-realize): Ditto.
	(mixi-community-realize): Ditto.
	(mixi-topic-realize): Ditto.
	(mixi-get-comments): Ditto.